# neural-scope

./: .gitignore  LICENSE  README.md  start.sh
.githooks/: pre-commit
backend/: pyproject.toml
backend/src/: main.py  model.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AttentionMap.tsx  Constellation.tsx  GeneratedText.tsx  InfoModal.tsx  ModelStatus.tsx  ProbChart.tsx  ResidualStream.tsx  Scrubber.tsx  TokenRace.tsx  TokenStream.tsx
